--- a/projetolivraria/package.json
+++ b/projetolivraria/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.1",
     "@react-navigation/drawer": "^7.2.1",
     "@react-navigation/material-top-tabs": "^7.2.3",
