--- a/projetolivraria/package.json
+++ b/projetolivraria/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@fontsource/playfair-display": "^5.2.5",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.1",
@@ -18,6 +19,7 @@
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/stack": "^7.2.1",
     "expo": "~53.0.8",
+    "expo-font": "~13.3.1",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.1",
     "react": "19.0.0",
@@ -26,8 +28,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-web": "^0.20.0",
-    "expo-font": "~13.3.1"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
