estilo no showinfo

--- a/projetolivraria/package.json
+++ b/projetolivraria/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto-slab": "^0.4.1",
     "@expo/metro-runtime": "~4.0.1",
     "@fontsource/playfair-display": "^5.2.5",
     "@react-native-masked-view/masked-view": "^0.3.2",
